@@ -212,9 +212,13 @@
  *			Started to honour --debug
  *			Dump core on LINUX if CL_DEBUG set
  *			Support multiple servers separated by colons
+ *	0.66h	26/1/04	Corrected endian problem (ntohs instead of htons)
  *
  * Change History:
  * $Log: clamav-milter.c,v $
+ * Revision 1.39  2004/01/26 14:12:42  nigelhorne
+ * Corrected endian problem (ntohs instead of htons)
+ *
  * Revision 1.38  2004/01/25 14:23:51  nigelhorne
  * Support multiple clamd servers
  *
@@ -314,9 +318,9 @@
  * Revision 1.6  2003/09/28 16:37:23  nigelhorne
  * Added -f flag use MaxThreads if --max-children not set
  */
-static	char	const	rcsid[] = "$Id: clamav-milter.c,v 1.38 2004/01/25 14:23:51 nigelhorne Exp $";
+static	char	const	rcsid[] = "$Id: clamav-milter.c,v 1.39 2004/01/26 14:12:42 nigelhorne Exp $";
 
-#define	CM_VERSION	"0.66g"
+#define	CM_VERSION	"0.66h"
 
 /*#define	CONFDIR	"/usr/local/etc"*/
 
@@ -1477,7 +1481,7 @@ clamfi_envfrom(SMFICTX *ctx, char **argv)
 
 		memset((char *)&reply, 0, sizeof(struct sockaddr_in));
 		reply.sin_family = AF_INET;
-		reply.sin_port = ntohs(port);
+		reply.sin_port = htons(port);
 
 		assert(serverIP != NULL);
 
