@@ -1,3 +1,7 @@
+Mon Jan 26 14:14:27 GMT 2004 (njh)
+----------------------------------
+  * clamav-milter: Corrected endian problem (ntohs instead of htons)
+
 Sun Jan 25 14:27:26 GMT 2004 (njh)
 ----------------------------------
   * clamav-milter: Corrected usage message
